fixed white space issue

--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ body {
 .main-grid {
     display: grid;
     grid-template-columns: 65vw 35vw;
+    grid-template-rows: 100% 100%;
 }
 
 #navbar {
@@ -248,7 +249,8 @@ button {
 
 #playlist {
     margin: 56px 30px 35px 35px;  
-    grid-column: 2 / 3; 
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
 }
 
 .video-thumbs {
